# medical_consultations

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
consultations/: models.py  serializers.py  urls.py  views.py
consultations/migrations/: 0001_initial.py
core/: settings.py  urls.py
core/utils/: api_response.py
professionals/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
professionals/migrations/: 0001_initial.py  0002_professional_created_at_professional_updated_at.py
tests/: test_authentication.py  test_consultations.py  test_professionals.py  tests.py
