[tool.poetry]
name = "medical-consultations"
version = "0.1.0"
description = ""
authors = ["jaqueline <jaquelinesa.82@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.3"
djangorestframework = "^3.17.1"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-django = "^4.8"
ruff = "^0.3.0"
flake8 = "^7.3.0"
black = "^26.3.1"
isort = "^8.0.1"
coverage = "^7.13.5"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
exclude = [".venv", "__pycache__", "migrations"]

[tool.coverage.run]
omit = ["*/migrations/*", "*/tests/*" ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
